Update new features section

--- a/docs/change-logs/v0.1.md
+++ b/docs/change-logs/v0.1.md
@@ -3,12 +3,20 @@
 > Initial launch of Habits CLI.
 > Distributed via `npm`.
 
-## New Features
+## Overview
 
 * Introduce four Habits CLI subcommands: `auth`, `property`, `transaction`, `invitation`.
 * Add aliases for feature for commands.
 * Launch an initial version of command help menu.
+
+## New Features
+
 * **Authentication** (i.e., `habits auth`): Add commands and support for sign in, sign up, and sign out.
 * **Property** (i.e., `habits property`): Add commands and support for showing the current user properties and updating user properties.
 * **Transaction** (i.e., `habits transaction`): Add commands and support for listing all transactions, listing transactions with pagination options, creating a custom transaction, update a transaction, removing one or more transactions.
 * **Invitation** (i.e., `habits invitation`): Add commands and support for activating invitation and retrieving invitation code.
+* **Help Menu**: Output help menu on most commands by passing `-h` or `--help` option into the corresponding command.
+* **Interactive Question Prompts**: Interactive prompt to ask for information.
+* **Tabular Display**: Colorful table display.
+
+
