--- a/docs/change-logs/v0.1.md
+++ b/docs/change-logs/v0.1.md
@@ -19,4 +19,8 @@
 * **Interactive Question Prompts**: Interactive prompt to ask for information.
 * **Tabular Display**: Colorful table display.
 
+## Development Related
 
+* `npm` packaging scripts
+* Abstraction of `Command`, `QuestionCommand`, and `CommandGroup` classes.
+* Build development utilities such as `network` (request & response support), `display` (console logging utilities), `storage` (information store utilities), and `axios` (axios with interceptors). Further, added some type definitions for modules.
