Add documentation changes section

--- a/docs/change-logs/v0.1.md
+++ b/docs/change-logs/v0.1.md
@@ -24,3 +24,9 @@
 * `npm` packaging scripts
 * Abstraction of `Command`, `QuestionCommand`, and `CommandGroup` classes.
 * Build development utilities such as `network` (request & response support), `display` (console logging utilities), `storage` (information store utilities), and `axios` (axios with interceptors). Further, added some type definitions for modules.
+
+## Documentation Changes
+
+* Add general `README.md`
+* Add installation guide
+* Add change logs and testing instructions for v0.1
