Correct link typo

--- a/docs/testing/v0.1.md
+++ b/docs/testing/v0.1.md
@@ -14,7 +14,7 @@ To begin, please read the overview of the Habits app: https://lanyanxiang.github
 
 Then, install the Habits CLI by following the installation guide: https://lanyanxiang.github.io/habits-cli/#/installation.
 
-You may also view the change log of this release to learn more about this patch: https://lanyanxiang.github.io/habits-cli/change-logs/v0.1.
+You may also view the change log of this release to learn more about this patch: https://lanyanxiang.github.io/habits-cli/#/change-logs/v0.1.
 
 ## Testing Hints
 
