Add activate your test session section

--- a/docs/testing/v0.1.md
+++ b/docs/testing/v0.1.md
@@ -16,6 +16,20 @@ Then, install the Habits CLI by following the installation guide: https://lanyan
 
 You may also view the change log of this release to learn more about this patch: https://lanyanxiang.github.io/habits-cli/#/change-logs/v0.1.
 
+## Activate Your Test Session
+
+```bash
+habits invitation activate <email>
+```
+
+or
+
+```bash
+habits invitation activate
+```
+
+...and you will be prompted for your email.
+
 ## Testing Hints
 
 The habits CLI group commands into categories. The syntax for accessing a command is usually
@@ -53,11 +67,11 @@ If the `-h` or `--help` option is passed into the bottom-level command, for exam
 
 First, ensure that you understand what the app is about and  the goals that it trys to achieve. Recall that [this information page](https://lanyanxiang.github.io/habits-cli/#/README) has what you need to know.
 
-Then, please go over each command and use this app as if you are building some habits or keeping track of some personal TODO lists yourself. You can use `habits -h` to find the available command categories, and explore the commands from there.
+Then, please go over each command and use this app as if you are building habits or keeping track of personal TODO lists yourself. You can use `habits -h` to find the available command categories, and explore the commands from there.
 
 If you encounter an issue, or have a new feature in mind as you are testing this app, please do not hesitate to [create an issue](https://github.com/lanyanxiang/habits-cli/issues).
 
-Approaching the end of this testing period, you will receive two surveys that you can respond. More information will be posted on this page when the surveys become available.
+Approaching the end of the testing period, you will receive two surveys. More information will be posted on this page when the surveys become available.
 
 To answer the surveys, you will need your personal invitation code. You can run
 
