Add blinking issue description

--- a/docs/release-plans/v0.2.md
+++ b/docs/release-plans/v0.2.md
@@ -6,7 +6,7 @@ As we are approaching the end of user testing for the Habits CLI `v0.1.239-alpha
 
 Through testing efforts in the v0.1-alpha release, we identified a few medium- or high-priority bugs as follows:
 
-- The user is unable to enter floating point numbers. For example, with the following command
+1. The user is unable to enter floating point numbers. For example, with the following command
 ```bash
 habits prop update -p 10.5
 ```
@@ -18,3 +18,9 @@ Issue link: https://github.com/lanyanxiang/habits-cli/issues/1.
 This may also be the case for individual transactions.
 
 Issue link: **To be Updated**.
+
+2. The question prompt blinks frequently when user enters data on some terminals. Investigation into this issue is needed, and maybe a change in prompting library is required.
+
+Issue link: **To be Updated**.
+
+3. 
