Add description for sign up issue

--- a/docs/release-plans/v0.2.md
+++ b/docs/release-plans/v0.2.md
@@ -23,4 +23,7 @@ Issue link: **To be Updated**.
 
 Issue link: **To be Updated**.
 
-3. 
+3. Issue with sign in & sign up: if a linux user does not have `libsecret` setup properly, then they will be blocked at log in or sign up time. We should make the error message more user-friendly.
+
+Issue link: https://github.com/lanyanxiang/habits-cli/issues/8
+
