Add compact table feature request

--- a/docs/release-plans/v0.2.md
+++ b/docs/release-plans/v0.2.md
@@ -1,8 +1,12 @@
 # Release Plan v0.2
 
+> Author: Jimmy Lan
+
 As we are approaching the end of user testing for the Habits CLI `v0.1.239-alpha`, I'd like to thank everyone who participated in this round of testing and submitted user feedback, either directly or anonymously.
 
-## Bug Fixes
+---
+
+## Known Bugs in v0.1
 
 Through testing efforts in the v0.1-alpha release, we identified a few medium- or high-priority bugs as follows:
 
@@ -27,3 +31,7 @@ Issue link: **To be Updated**.
 
 Issue link: https://github.com/lanyanxiang/habits-cli/issues/8
 
+## Feature Requests for v0.2
+
+1. `habits tran ls` - Add a "compact display" option to show information in a less padded table. Link: https://github.com/lanyanxiang/habits-cli/issues/3.
+2. 
