Add full screen log feature description

--- a/docs/release-plans/v0.2.md
+++ b/docs/release-plans/v0.2.md
@@ -34,4 +34,5 @@ Issue link: https://github.com/lanyanxiang/habits-cli/issues/8
 ## Feature Requests for v0.2
 
 1. `habits tran ls` - Add a "compact display" option to show information in a less padded table. Link: https://github.com/lanyanxiang/habits-cli/issues/3.
-2. 
+2. `habits tran ls` - Display table in terminal full-screen mode, similar to how the program `less` show file contents. (Initial thoughts on this: maybe we can pipe the table to a program such as `less`.) Link: **To be Updated**.
+3. 
