Add default title feature description

--- a/docs/release-plans/v0.2.md
+++ b/docs/release-plans/v0.2.md
@@ -35,4 +35,4 @@ Issue link: https://github.com/lanyanxiang/habits-cli/issues/8
 
 1. `habits tran ls` - Add a "compact display" option to show information in a less padded table. Link: https://github.com/lanyanxiang/habits-cli/issues/3.
 2. `habits tran ls` - Display table in terminal full-screen mode, similar to how the program `less` show file contents. (Initial thoughts on this: maybe we can pipe the table to a program such as `less`.) Link: **To be Updated**.
-3. 
+3. Use a default title if the user does not specify one. In other words, we should make `title` input of a transaction optional for better user experience. Link: https://github.com/lanyanxiang/habits-cli/issues/2.
