Add features from timeline section

--- a/docs/release-plans/v0.2.md
+++ b/docs/release-plans/v0.2.md
@@ -34,5 +34,12 @@ Issue link: https://github.com/lanyanxiang/habits-cli/issues/8
 ## Feature Requests for v0.2
 
 1. `habits tran ls` - Add a "compact display" option to show information in a less padded table. Link: https://github.com/lanyanxiang/habits-cli/issues/3.
+
 2. `habits tran ls` - Display table in terminal full-screen mode, similar to how the program `less` show file contents. (Initial thoughts on this: maybe we can pipe the table to a program such as `less`.) Link: **To be Updated**.
+
 3. Use a default title if the user does not specify one. In other words, we should make `title` input of a transaction optional for better user experience. Link: https://github.com/lanyanxiang/habits-cli/issues/2.
+
+## Features from timeline planning for v0.2
+
+1. Allow users to define custom property types. A user should be able to specify what properties that they want to use to motivate themselves. Currently, only a default property `points` is possible.
+2. Allow users to specify an upper-bound on the amount of properties that they can obtain per day / week / month. Display this limit when transactions are added and possible deleted.
