Add other features section

--- a/docs/release-plans/v0.2.md
+++ b/docs/release-plans/v0.2.md
@@ -43,3 +43,7 @@ Issue link: https://github.com/lanyanxiang/habits-cli/issues/8
 
 1. Allow users to define custom property types. A user should be able to specify what properties that they want to use to motivate themselves. Currently, only a default property `points` is possible.
 2. Allow users to specify an upper-bound on the amount of properties that they can obtain per day / week / month. Display this limit when transactions are added and possible deleted.
+
+## Other features on timeline for versions post v0.2
+
+
