Add description for dailies

--- a/docs/release-plans/v0.2.md
+++ b/docs/release-plans/v0.2.md
@@ -46,4 +46,4 @@ Issue link: https://github.com/lanyanxiang/habits-cli/issues/8
 
 ## Other features on timeline for versions post v0.2
 
-
+* **Dailies** - Allow users to define custom daily tasks. These tasks can be completed repeatedly over the duration of a day (or a user-defined duration). The users may specify what to reward once a certain number of times this daily is completed.
