Complete other features section

--- a/docs/release-plans/v0.2.md
+++ b/docs/release-plans/v0.2.md
@@ -47,3 +47,7 @@ Issue link: https://github.com/lanyanxiang/habits-cli/issues/8
 ## Other features on timeline for versions post v0.2
 
 * **Dailies (repetitive tasks)** - Allow users to define custom daily tasks. These tasks can be completed repeatedly over the duration of a day (or a user-defined duration). The users may specify what to reward once a certain number of times this daily is completed.
+* **Incomplete task list** - Users can keep track of a list of tasks together with their rewards post completion. Users can then run a command to check-off an item from this list and obtain the rewards when the corresponding task is completed.
+* **Random Rewards** - Allow users to define random rewards for dailies and/or todo items.
+* **Reset Password** - Currently, `habits-restapi` has support for password reset, but we have not build support for this in `habits-cli`.
+* **Social Elements** - Allow users to add friends and achieve a shared goal with their friends.
