--- a/docs/release-plans/v0.2.md
+++ b/docs/release-plans/v0.2.md
@@ -51,3 +51,10 @@ Issue link: https://github.com/lanyanxiang/habits-cli/issues/8
 * **Random Rewards** - Allow users to define random rewards for dailies and/or todo items.
 * **Reset Password** - Currently, `habits-restapi` has support for password reset, but we have not build support for this in `habits-cli`.
 * **Social Elements** - Allow users to add friends and achieve a shared goal with their friends.
+
+Thank you for your interest in `habits` projects. We will continue to improve this project together and achieve more. May the spirit of programming and innovation be with the people who deserve, and so creativity never stops.
+
+
+Sincerely,
+
+Jimmy Lan
