Update ticket links

--- a/docs/release-plans/v0.2.md
+++ b/docs/release-plans/v0.2.md
@@ -21,11 +21,11 @@ Issue link: https://github.com/lanyanxiang/habits-cli/issues/1.
 
 This may also be the case for individual transactions.
 
-Issue link: **To be Updated**.
+Issue link: https://github.com/lanyanxiang/habits-cli/issues/9.
 
 2. The question prompt blinks frequently when user enters data on some terminals. Investigation into this issue is needed, and maybe a change in prompting library is required.
 
-Issue link: **To be Updated**.
+Issue link: https://github.com/lanyanxiang/habits-cli/issues/10.
 
 3. Issue with sign in & sign up: if a linux user does not have `libsecret` setup properly, then they will be blocked at log in or sign up time. We should make the error message more user-friendly.
 
@@ -35,7 +35,7 @@ Issue link: https://github.com/lanyanxiang/habits-cli/issues/8
 
 1. `habits tran ls` - Add a "compact display" option to show information in a less padded table. Link: https://github.com/lanyanxiang/habits-cli/issues/3.
 
-2. `habits tran ls` - Display table in terminal full-screen mode, similar to how the program `less` show file contents. (Initial thoughts on this: maybe we can pipe the table to a program such as `less`.) Link: **To be Updated**.
+2. `habits tran ls` - Display table in terminal full-screen mode, similar to how the program `less` show file contents. (Initial thoughts on this: maybe we can pipe the table to a program such as `less`.) Link: https://github.com/lanyanxiang/habits-cli/issues/11.
 
 3. Use a default title if the user does not specify one. In other words, we should make `title` input of a transaction optional for better user experience. Link: https://github.com/lanyanxiang/habits-cli/issues/2.
 
