Replace documentation links

--- a/docs/testing/v0.1.md
+++ b/docs/testing/v0.1.md
@@ -10,11 +10,12 @@ The testing of habits CLI begins on September 3rd, 2021. Test session will end o
 
 ## Begin Testing
 
-To begin, please read the overview of the Habits app: https://lanyanxiang.github.io/habits-cli/#/README.
+To begin, please read the overview of the Habits app: https://habits-cli.jimmy-lan.com#/README.
 
-Then, install the Habits CLI by following the installation guide: https://lanyanxiang.github.io/habits-cli/#/installation.
+Then, install the Habits CLI by following the installation guide: https://habits-cli.jimmy-lan.com#/installation.
 
-You may also view the change log of this release to learn more about this patch: https://lanyanxiang.github.io/habits-cli/#/change-logs/v0.1.
+You may also view the change log of this release to learn more about this patch: https://habits-cli.jimmy-lan.com#
+/change-logs/v0.1.
 
 ## Activate Your Test Session
 
@@ -65,9 +66,11 @@ If the `-h` or `--help` option is passed into the bottom-level command, for exam
 
 ## Your Tasks
 
-First, ensure that you understand what the app is about and  the goals that it trys to achieve. Recall that [this information page](https://lanyanxiang.github.io/habits-cli/#/README) has what you need to know.
+First, ensure that you understand what the app is about and the goals that it trys to achieve. Recall
+that [this information page](https://habits-cli.jimmy-lan.com#/README) has what you need to know.
 
-Then, please go over each command and use this app as if you are building habits or keeping track of personal TODO lists yourself. You can use `habits -h` to find the available command categories, and explore the commands from there.
+Then, please go over each command and use this app as if you are building habits or keeping track of personal TODO lists
+yourself. You can use `habits -h` to find the available command categories, and explore the commands from there.
 
 If you encounter an issue, or have a new feature in mind as you are testing this app, please do not hesitate to [create an issue](https://github.com/lanyanxiang/habits-cli/issues).
 
